--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
             <a href="index.html">Home</a>
             <a href="dashboard.html">Dashboard</a>
             <a href="user-transactions.html">User & Transactions</a>
+            <a href="portfolio-performance.html">Portfolio Performance</a>
             <a href="#" id="logoutButton">Logout</a>
         </nav>
     </header>
@@ -21,7 +22,6 @@
             <button id="refreshButton">Refresh S&P 500 List</button>
             <button id="updateStockPrices">Update Stock Prices</button>
             <button id="updateWatchList">Update Watch List</button>
-            <button id="refreshCompanyList">Refresh Company List</button>
             <button id="cleanupWatchList">Clean Up Watch List</button>
             <button id="updateWatchListButton">Update Watch List</button>
             <button id="getWatchListButton">Refresh Watch List</button>
