--- a/public/user-transactions.html
+++ b/public/user-transactions.html
@@ -62,6 +62,33 @@
             </form>
         </section>
 
+        <section id="bulkUpload" class="user-transactions-card">
+            <h2>Bulk Transaction Upload</h2>
+            <form id="uploadForm" class="upload-form">
+                <div class="form-group">
+                    <label for="portfolioId">Portfolio ID:</label>
+                    <select id="uploadPortfolioId" name="portfolio_id" required>
+                        <option value="">Select a Portfolio ID</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <a href="/api/transactions/template" class="template-link" download>
+                        Download Transaction Template
+                    </a>
+                </div>
+                <div class="form-group">
+                    <label for="transactionFile">Upload Transactions:</label>
+                    <input type="file" id="transactionFile" name="file" accept=".xlsx,.xls" required>
+                </div>
+                <div class="form-group">
+                    <a href="/templates/transaction_template.xlsx" download class="template-link">
+                        Download Template
+                    </a>
+                </div>
+                <button type="submit" class="submit-button">Upload Transactions</button>
+            </form>
+        </section>
+
         <section id="userRegistration" class="user-transactions-card">
             <h2>User Registration</h2>
             <form id="userForm">
