--- a/public/user-transactions.html
+++ b/public/user-transactions.html
@@ -12,7 +12,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="dashboard.html">Dashboard</a>
-            <a href="user-transactions.html">User & Transactions</a>
+            <a href="portfolio-performance.html">Portfolio Performance</a>
         </nav>
     </header>
     <main class="user-transactions-container">
@@ -79,11 +79,6 @@
                 <div class="form-group">
                     <label for="transactionFile">Upload Transactions:</label>
                     <input type="file" id="transactionFile" name="file" accept=".xlsx,.xls" required>
-                </div>
-                <div class="form-group">
-                    <a href="/templates/transaction_template.xlsx" download class="template-link">
-                        Download Template
-                    </a>
                 </div>
                 <button type="submit" class="submit-button">Upload Transactions</button>
             </form>
